--- a/pom.xml
+++ b/pom.xml
@@ -7,33 +7,43 @@
     <groupId>scratch</groupId>
     <artifactId>scratch-back</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.5.RELEASE</version>
-    </parent>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>scratch_controllers</module>
+        <module>scratch_services</module>
+    </modules>
 
     <properties>
         <java.version>1.8</java.version>
+        <org.springframework.scratch_ap.security-version>3.2.5.RELEASE</org.springframework.scratch_ap.security-version>
+        <org.springframework-version>4.0.6.RELEASE</org.springframework-version>
+        <project.build.sourceLevel>1.8</project.build.sourceLevel>
+        <project.build.targetLevel>1.8</project.build.targetLevel>
+        <compiler.plugin.version>2.3.2</compiler.plugin.version>
+        <org.slf4j-version>1.7.7</org.slf4j-version>
     </properties>
-
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${compiler.plugin.version}</version>
+                <configuration>
+                    <source>${project.build.sourceLevel}</source>
+                    <target>${project.build.targetLevel}</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
 
-    
+    <dependencies>
+        <!-- Logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${org.slf4j-version}</version>
+        </dependency>
+    </dependencies>
 </project>
