--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,11 @@
 
     <modules>
         <module>scratch_controllers</module>
-        <module>scratch_services</module>
     </modules>
 
     <properties>
         <java.version>1.8</java.version>
-        <org.springframework.scratch_ap.security-version>3.2.5.RELEASE</org.springframework.scratch_ap.security-version>
+        <spring.version>5.0.7.RELEASE</spring.version>
         <org.springframework-version>4.0.6.RELEASE</org.springframework-version>
         <project.build.sourceLevel>1.8</project.build.sourceLevel>
         <project.build.targetLevel>1.8</project.build.targetLevel>
@@ -41,9 +40,9 @@
     <dependencies>
         <!-- Logging -->
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${org.slf4j-version}</version>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version>
         </dependency>
     </dependencies>
 </project>
