--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-#server.port = 9090
+server.port=9090
+
+## PostreSQL config
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_scratch?useSSL=false
+spring.datasource.username=scratch
+spring.datasource.password=scratch
+spring.datasource.driverClassName=org.postgresql.Driver
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+
+# create and drop tables and sequences, loads import.sql
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
