--- a/scratch-controllers/src/main/resources/application.properties
+++ b/scratch-controllers/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9090
 
-## PostreSQL config
+## PostreSQL scratch.config
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_scratch?useSSL=false
 spring.datasource.username=scratch
 spring.datasource.password=scratch
